Refactor: 코드 취약점 수정