@@ -130,8 +130,8 @@ class BookServiceTest extends IntegrationTest {
 
     // Then
     if (results.getTotalElements() >= 2) {
-      BookGetResult expensiveBook = results.getContent().get(0);
-      BookGetResult cheapBook = results.getContent().get((int) (results.getTotalElements() - 1));
+      BookGetResult expensiveBook = results.getContent().getFirst();
+      BookGetResult cheapBook = results.getContent().getLast();
       assertThat(expensiveBook.purchasePrice()).isGreaterThan(cheapBook.purchasePrice());
     }
 
@@ -156,8 +156,8 @@ class BookServiceTest extends IntegrationTest {
             null, null, null, false, false, SortOrder.DATE, PageRequest.of(0, 10));
 
     // Then
-    BookGetResult latestBook = results.getContent().get(0);
-    BookGetResult initialBook = results.getContent().get((int) (results.getTotalElements() - 1));
+    BookGetResult latestBook = results.getContent().getFirst();
+    BookGetResult initialBook = results.getContent().getLast();
 
     assertThat(latestBook.bookId()).isGreaterThan(initialBook.bookId());
     assertThat(results).isNotEmpty().hasSize(10);
